Added error warnings display. Included logic for warning auto removal.

--- a/projects/01-to-do-list/style.css
+++ b/projects/01-to-do-list/style.css
@@ -2,3 +2,9 @@
     text-decoration: underline;
     text-decoration-color: #000;
 }
+
+.error-note {
+    color: red;
+    font-style: italic;
+    font-size: 10px;
+}
